crates/vietime-doctor/tests/snapshots/render_snapshots__distro__debian_12_electron_no_ozone.snap
---
source: crates/vietime-doctor/tests/render_snapshots.rs
expression: out
---
# VietIME Doctor Report
Generated: 2026-04-25T10:23:11+00:00
vietime-doctor v0.1.0

## Environment
- Distro: Debian GNU/Linux 12 (bookworm)
- Desktop: GNOME 43
- Session: wayland
- Kernel: 6.1.0-20-amd64
- Shell: bash
- Locale: en_US.UTF-8

## IM Framework
- Active: Fcitx5
- Fcitx5: running, version 5.0.8

### Engines
- bamboo (Fcitx5)

## Environment Variables

| Var | Value | Source |
|---|---|---|
| GTK_IM_MODULE | fcitx | /etc/environment |
| QT_IM_MODULE | fcitx | /etc/environment |
| XMODIFIERS | @im=fcitx | /etc/environment |
| INPUT_METHOD | fcitx | /etc/environment |
| SDL_IM_MODULE | fcitx | /etc/environment |

## App-specific

### Visual Studio Code (`vscode`)
- Binary: `/usr/bin/code`
- Kind: Electron
- Version: `1.89.0`
- Electron version: `28.2.10`
- Uses Wayland (Ozone): no
- Note: no --ozone-platform=wayland flag seen

## Checks
- [error] Electron app running without Ozone/Wayland — vscode is an Electron app but was launched without `--ozone-platform=wayland`.

## Recommendations

### VR007: Launch Electron apps with native Wayland input [safe to run unattended]
Add the Ozone/Wayland flags to your launcher.

```
code --ozone-platform=wayland --enable-features=UseOzonePlatform
```

References:
- https://wiki.archlinux.org/title/Wayland#Electron
